--- a/проекти джава скрипт/дз 3/index.html
+++ b/проекти джава скрипт/дз 3/index.html
@@ -15,6 +15,7 @@
     <a href="#">Контакти</a>
 </li> 
 </ul>
+<p>gggggggggggggggg</p>
 <ul>
     <li>
         <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
